update analytical pipeline

--- a/vaccine_effectiveness_analytical_pipeline/scripts/analytical-pipeline.QMD
+++ b/vaccine_effectiveness_analytical_pipeline/scripts/analytical-pipeline.QMD
@@ -199,3 +199,13 @@ tryCatch({
 })
 
 ```
+
+```{r, remove , message=FALSE, warning=FALSE, error=TRUE}
+
+# 0. General settings and loading of data
+
+if (file.exists(auxilary_database_path)) {
+  file.remove(auxilary_database_path)
+}
+
+```
